extension/src/popup/components/account/CollectibleInfo/styles.scss
@use "../../../styles/utils.scss" as *;

.CollectibleInfo {
  &__image {
    border-radius: pxToRem(24px);
    margin-bottom: pxToRem(12px);
    overflow: hidden;
    width: 100%;
    aspect-ratio: 1 / 1;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    &--small {
      width: 100%;
      height: 100%;
      border-radius: pxToRem(0);
      margin: 0;
    }

    &--history {
      border-radius: pxToRem(6px);
    }

    &__placeholder {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100%;
      width: 100%;
      background-color: var(--sds-clr-gray-03);

      svg {
        height: pxToRem(48px);
        width: pxToRem(48px);
        color: var(--sds-clr-gray-11);
      }

      &--small {
        svg {
          height: auto;
          width: auto;
        }
      }
    }
  }

  &__base-info {
    &__row {
      align-items: center;
      border-bottom: 1px solid var(--sds-clr-gray-06);
      display: flex;
      justify-content: space-between;
      flex-direction: row;
      padding-bottom: pxToRem(12px);

      &:last-child {
        border: 0;
        padding-bottom: 0;
      }
    }
  }
  &__block {
    border-radius: pxToRem(16px);
    background: var(--sds-clr-gray-03);
    display: flex;
    flex-direction: column;
    gap: pxToRem(12px);
    padding: pxToRem(12px) pxToRem(16px);
    width: 100%;
    display: flex;

    &__label {
      color: var(--sds-clr-gray-11);
      font-size: pxToRem(14px);
      font-weight: var(--sds-fw-medium);
      line-height: pxToRem(20px);
    }

    &__value {
      color: var(--sds-clr-gray-12);
      font-size: pxToRem(14px);
    }
  }
}

